<resources>
    <!--Nombre de app-->
    <string name="nombre_app">ToDoOkApp</string>

    <!--String Register-->
    <string name="register">Registro</string>
    <string name="alta">Date de alta completando los siguientes datos:</string>
    <string name="text_hint_name">Nombre</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_pass">Contraseña</string>
    <string name="btn_text_crear">Crear cuenta</string>
    <string name="text_iniciar_sesion">¿Ya tienes cuenta? Iniciar sesión.</string>
    <string name="app_name">ToDoOkApp</string>

    <!-- Menu -->
    <string name="menu_options">menu opciones</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_tema">Tema Oscuro</string>
    <string name="menu_contacto">Contacto</string>

    <!--Perfil-->
    <string name="MiPerfil">Mi Perfil</string>
    <string name="NombresDato">Nombre</string>
    <string name="EmailDato">Email</string>
    <string name="Contraseña">Contraseña</string>
    <string name="btnActualizar">Actualizar Datos</string>
    <string name="btncamara">Cargar Imagen</string>
    <string name="imagen">Foto de perfil </string>

    <!--Modificar Perfil-->
    <string name="NombreModificado">Nombre</string>
    <string name="EmailModificado">Email</string>
    <string name="ContraseñaModificada">Contraseña</string>

    <!--Tareas-->
    <string name="todook">ToDoOk</string>
    <string name="btnadd_img">Menu options</string>
    <string name="tasks_message">Sin tareas</string>
    <string name="tarea_1">Tarea 1</string>
    <string name="date_1">02/10/2023</string>
    <string name="time_1">09:00</string>
    <string name="tarea_2">Tarea 2</string>
    <string name="date_2">25/12/2023</string>
    <string name="time_2">23:59</string>
    <string name="tarea_3">Tarea 3</string>
    <string name="date_3">29/09/2023</string>
    <string name="time_3">08:00</string>
    <string name="Contact">Contact</string>
    <string name="CampoContact">¿Preguntas? ¿Necesitas Ayuda?\n\nEscríbenos a\n\nemail@email.com\n\ny te responderemos!\n\n</string>


    <!--String Login-->

    <string name="login">Login</string>
    <string name="comentario">Inicia sesión con tu cuenta ToDoOk :</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="recuperar_contraseña">¿Olvidaste tu contraseña? Click Aqui</string>
    <string name="para_registrarse">¿No tenes cuenta?  Registrate</string>

    <!-- Dashboard -->
    <string name="add_item">agregar nueva tarea</string>

    <!-- Agregar nueva tarea -->
    <string name="task_priority">Alta</string>
    <string name="high_priority">Alta</string>
    <string name="med_priority">Media</string>
    <string name="low_priority">Baja</string>
    <string name="add_button">Agregar</string>

    <!-- Menu contextual eliiminar tareas-->
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Eliminar</string>


    =======

    <string name="contacto">Contacto</string>
    <string name="back_dashboard">Retroceder al dashboard</string>
    <string name="new_task">Mi Perfil</string>
    <string name="Foto" />

    >>>>>>> 698f5183aa8c131a4b0f8e901679a504bf7fe100


</resources>