<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/img_back_c"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toStartOf="@+id/appTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/baseline_arrow_back_24"
            tools:layout_editor_absoluteY="20dp" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:text="Nueva Tarea"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/edittitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Titulo de tarea"
            android:minHeight="48dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp" />

        <EditText
            android:id="@+id/editdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Agregar fecha"
            android:minHeight="48dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp" />

        <EditText
            android:id="@+id/edittime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Agregar hora"
            android:minHeight="48dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Prioridad" />

        <!-- RadioGroup for visible selection of a priority -->
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/radButton1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/high_priority" />

            <RadioButton
                android:id="@+id/radButton2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/med_priority" />

            <RadioButton
                android:id="@+id/radButton3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/low_priority" />

        </RadioGroup>

        <Button
            android:id="@+id/saveButton"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/add_button"
            android:textColor="@android:color/primary_text_dark" />


    </LinearLayout>



</RelativeLayout>