<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <!-- Barra superior -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <ImageView
            android:id="@+id/img_back_v"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toStartOf="@+id/appTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/baseline_arrow_back_24"
            tools:layout_editor_absoluteY="20dp"
            android:contentDescription="@string/back_dashboard" />

        <TextView
            android:id="@+id/appTitle"
            style="@style/Base.Theme.ToDoOkApp.Light"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"
            android:text="@string/contacto"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat"
            />
        />


    </androidx.appcompat.widget.Toolbar>


    <!-- Contactenos -->


    <TextView
        android:id="@+id/title1"
        style="@style/Base.Theme.ToDoOkApp.Light"
        android:layout_width="381dp"
        android:layout_height="338dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:drawablePadding="24dp"
        android:gravity="start"
        android:text="@string/CampoContact"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="221dp"
        android:layout_height="64dp"
        android:layout_marginTop="68dp"
        android:text="Te invitamos a ver el siguiente Video"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <Button
        android:id="@+id/btn_irvideo"
        android:layout_width="135dp"
        android:layout_height="37dp"
        android:background="@color/buttonColorPrimary"
        android:text="Video"
        android:textAlignment="center"
        android:textColor="?android:textColorSecondary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.482" />


</androidx.constraintlayout.widget.ConstraintLayout>